[KOGITO-8928] Allow actions in for each to access result of prev one